
todo:
isRebootRequested : http://askubuntu.com/questions/28530/how-can-i-tell-what-package-requires-a-reboot-of-my-system
mac getIpByName liefert name von IPnum

opsi-script (4.12.4.26) stable; urgency=low

 * Parameter 'pcprofil' not supported any more

-- d.oertel <d.oertel@uib.de> Tue, 27 Jul 2021 15:00

opsi-script (4.12.4.25) stable; urgency=low

 * switch to Lazarus 2.2 / FPC 3.2.2
 * osparser: include_append:  comment out 'encoding=' lines from include_append because
              this line can become a part of a secondary section

-- d.oertel <d.oertel@uib.de> Tue, 20 Jul 2021 15:00


opsi-script (4.12.4.24) stable; urgency=low

 * new: xml2 sections: /encoding Parameter
 * new: xml2 sections: /AllNTUserProfiles Parameter
 * osfunc: file functions use findfirstUTF8 instead of findfirst
 * xml2 sections: many log warnings lowerd ti LLInfo
 * xml2 sections: new command: rootNodeOnCreate = <node>
 * xml2 sections: not existing files will be created
    using the value of rootNodeOnCreate, fallback to 'rootnode' if not existing
 * osparser: include (append / insert) statements fixes on read file with encoding
 * osparser: importlib statements fixes on read file with encoding
 * osparser: less encoding reload in LoadValidLinesFromFile
 * osencoding: more logging and retries at loadTextFileWithEncoding in order to fix
   'file in use' error.

-- d.oertel <d.oertel@uib.de> Mon, 05 Jul 2021 15:00

opsi-script (4.12.4.23) stable; urgency=low

 * osfuncwin2: fix for function resolveWinSymlink
 * new constant %opsiserviceClientId% (FQDN in service context, empty without)
 * parameter /clientid if present wil be ussed as preferred source for %hostid%
 * new parameter /depotpath (only together with /opsiservice) to pass the path to the depot
 * linux opsi-script library search path:
    %scriptpath%                     // standard by definition
    %ScriptPath%/../lib              // standard by definition